--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,4 @@ Mahjong_yolo11x_250915.mlpackage filter=lfs diff=lfs merge=lfs -text
 Mahjong_yolo11x_250915.pt filter=lfs diff=lfs merge=lfs -text
 opencv2 filter=lfs diff=lfs merge=lfs -text
 polars.abi3.so filter=lfs diff=lfs merge=lfs -text
+Mahjong_yolo11x_250915.mlpackage/Data/com.apple.CoreML/weights/weight.bin filter=lfs diff=lfs merge=lfs -text
